dr01-python-microservices6/k8s/cast/cast-db-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: cast-db-service
spec:
  selector:
    app: postgres
  ports:
    - name: cast-db-service-port
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
#kind: Deployment
kind: StatefulSet
metadata:
  name: cast-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-db
  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
        - name: cast-db
          image: postgres
          ports:
            - containerPort: 5432
          ports:
            - containerPort: 5432
---
