dr01-python-microservices6/k8s/cast/fastapi-cast-deployment.yml
# # /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dr01-python-microservices6/cast-service/k8s/fastapi-cast-deployment.yaml
##################
### BIBLIO
#### DM-JENKINS-B62-3 -  DevOps Project — Part 4 / Dergham Lahcene /Dergham Lahcene; 8 min read; Feb 25, 2023
#####  https://medium.com/@l.dergham/devops-project-part-4-92d6641ed752
---
# fastapi-cast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-cast-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-cast-deployment
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
---
# fastapi-cast-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-cast-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-cast-deployment
  template:
    metadata:
      labels:
        app: fastapi-cast-deployment
    spec:
      containers:
        - name: fastapi-cast-ctnr
#          image: lahcenedergham/fastapi-image:latest
           image: cpa8876/casts-ds-fastapi
           command: ["uvicorn", "app.main:app", "--reload", "--host 0.0.0.0", "--port 5000"]
          ports:
            - containerPort: 5000
---
